src/v7/CAPI_Monitors.pas


function Monitors_Get_Element(): PAnsiChar; CDECL;
begin
    Result := DSS_GetAsPAnsiChar(Monitors_Get_Element_AnsiString());
end;
//------------------------------------------------------------------------------
procedure Monitors_Set_Element(const Value: PAnsiChar); CDECL;
var
    pMon: TMonitorObj;
begin
    if ActiveCircuit = NIL then
        Exit;
    pMon := ActiveCircuit.Monitors.Active;
    if pMon = NIL then
        Exit;
    pMon.ElementName := Value;
    pMon.PropertyValue[1] := Value;
    pMon.RecalcElementData;
end;
//------------------------------------------------------------------------------
function Monitors_Get_Terminal(): Integer; CDECL;
var
    pMon: TMonitorObj;
begin
    Result := 0;
    if ActiveCircuit = NIL then
        Exit;
    pMon := ActiveCircuit.Monitors.Active;
    if pMon = NIL then
        Exit;
    Result := pMon.MeteredTerminal;
end;
//------------------------------------------------------------------------------
procedure Monitors_Set_Terminal(Value: Integer); CDECL;
var
    pMon: TMonitorObj;
begin
    if ActiveCircuit = NIL then
        Exit;
    pMon := ActiveCircuit.Monitors.Active;
    if pMon = NIL then
        Exit;
    pMon.MeteredTerminal := Value;
    pMon.RecalcElementData;
end;
//------------------------------------------------------------------------------
function Monitors_Get_idx(): Integer; CDECL;
begin
    if ActiveCircuit <> NIL then
        Result := ActiveCircuit.Monitors.ActiveIndex
    else
        Result := 0;
end;
//------------------------------------------------------------------------------
procedure Monitors_Set_idx(Value: Integer); CDECL;
var
    pMonitor: TMonitorObj;
begin
    if ActiveCircuit = NIL then
        Exit;
    pMonitor := ActiveCircuit.Monitors.Get(Value);
    if pMonitor = NIL then
    begin
        DoSimpleMsg('Invalid Monitor index: "' + IntToStr(Value) + '".', 656565);
        Exit;
    end;
    ActiveCircuit.ActiveCktElement := pMonitor;
end;
//------------------------------------------------------------------------------
end.
